Add Role entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=alumni-management
 
 
 #For the database postgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/alumni_db
 spring.datasource.username=postgres
 spring.datasource.password=8910
 
