add even in image and if it wont work out then remove it i have do comment which is to be remove and add setUser(user) in update alumniprofileservice page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.datasource.password=8910
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+#update below code if code not work then remmove all below thing
+# File upload configuration
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+# Serve static files from uploads directory
+spring.web.resources.static-locations=file:./uploads/,classpath:/static/
+server.address=0.0.0.0
